feat: add maintenance mode toggles
